# gu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp
assets/models/: example.fbx  example.g3db  example.g3dj  example.ubj
assets/shaders/: normaltest.frag  test.frag  test.vert
cphere/: game.html  game.js  game.wasm
cphere2/: game.js  game.wasm
desktop_test/: CMakeLists.txt
emscripten_test/: gutest.data  gutest.html  gutest.js  gutest.wasm
glad/: CMakeLists.txt
html_test/: CMakeLists.txt
source/: gl_includes.h  gu_imgui_config.h  json.hpp  json_fwd.hpp  main.cpp
source/aseprite/: Aseprite.cpp  Aseprite.h  AsepriteLoader.cpp  AsepriteLoader.h  AsepriteTextureGenerator.cpp  AsepriteTextureGenerator.h
source/asset_manager/: AssetManager.cpp  AssetManager.h  asset.cpp  asset.h
source/assets/: AssetManager.cpp  AssetManager.h  asset.cpp  asset.h
source/audio/: OggLoader.cpp  OggLoader.h  WavLoader.cpp  WavLoader.h  audio.cpp  audio.h
source/code_editor/: CodeEditor.cpp  CodeEditor.h
source/example_screens/: instanced_mesh_screen.cpp  mesh_screen.cpp  triangle_screen.cpp  web_assembly_screen.cpp
source/files/: FileReader.cpp  FileReader.h  FileWatcher.cpp  FileWatcher.h  file.cpp  file.h  file_utils.cpp  file_utils.h
source/game/: game.cpp  game.h  screen.cpp  screen.h
source/graphics/: camera.cpp  camera.h  cube_map.cpp  cube_map.h  frame_buffer.cpp  frame_buffer.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  shader_asset.cpp  shader_asset.h  shader_program.cpp  shader_program.h  stb_image.h  texture.cpp  texture.h  texture_array.cpp  texture_array.h
source/graphics/3d/: armature.cpp  armature.h  debug_line_renderer.cpp  debug_line_renderer.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  model.cpp  model.h  model_instance.cpp  model_instance.h  perspective_camera.cpp  perspective_camera.h  shared_3d.h  tangent_calculator.cpp  tangent_calculator.h  vert_attributes.cpp  vert_attributes.h  vert_attributes_string.cpp  vert_attributes_string.h  vert_buffer.cpp  vert_buffer.h
source/graphics/3d/loaders/: gltf_model_loader.cpp  gltf_model_loader.h  json_model_loader.cpp  json_model_loader.h
source/graphics/3d/renderers/: debug_line_renderer.cpp  debug_line_renderer.h  quad_renderer.h
source/graphics/camera/: camera.cpp  camera.h  flying_camera_controller.cpp  flying_camera_controller.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
source/graphics/textures/: cube_map.cpp  cube_map.h  dds_texture.cpp  dds_texture.h  shared_texture.h  texture.cpp  texture.h  texture_array.cpp  texture_array.h
source/gu/: game_config.h  game_utils.cpp  game_utils.h  profiler.cpp  profiler.h  screen.h
source/input/: gamepad_input.cpp  gamepad_input.h  key_input.cpp  key_input.h  mouse_input.cpp  mouse_input.h
source/math/: interpolation.h  loops.h  math_utils.h  polygon.cpp  polygon.h  segment.cpp  segment.h  sphere.cpp  sphere.h  sphere_mesh_generator.cpp  sphere_mesh_generator.h  triangle.h
source/test_screens/: instanced_mesh_screen.cpp  mesh_screen.cpp  triangle_screen.cpp  web_assembly_screen.cpp
source/utils/: a_star_pathfinder.h  base64.h  cofu.h  delegate.h  gltf_model_loader.cpp  gltf_model_loader.h  gu_error.h  hashing.h  json_model_loader.cpp  json_model_loader.h  math_utils.h  quad_renderer.h  startup_args.h  string.h  string_utils.h  type_name.cpp  type_name.h  weak_pointers.h
source/utils/aseprite/: Aseprite.cpp  Aseprite.h  AsepriteLoader.cpp  AsepriteLoader.h  AsepriteTextureGenerator.h
source/utils/camera/: flying_camera_controller.cpp  flying_camera_controller.h
source/utils/code_editor/: CodeEditor.cpp  CodeEditor.h
source/utils/math/: interpolation.h  polygon.cpp  polygon.h  sphere.cpp  sphere.h  sphere_mesh_generator.cpp  sphere_mesh_generator.h
